--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </nav>
 
         <!-- CONTENT -->
-        <div class="container-fluid gallery">
+        <div class="container gallery">
 
-          <div class="row row-cols-1 row-cols-sm-2">
+          <div class="row row-cols-1 row-cols-md-2">
 
             <div class="col mt-2">
               <div class="img-container">
@@ -70,7 +70,7 @@
           
           </div>
 
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-4">
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3">
 
             <div class="col mt-3">
               <div class="img-container">
@@ -79,18 +79,6 @@
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Nausicaä</p>
                     <p class="fs-4"># Tote bag</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col mt-3">
-              <div class="img-container">
-                <img data-src="./img/sally.png"  class="img-fluid shadow-sm rounded lazy" />
-                <div class="overlay">
-                  <div class="overlay-text">
-                    <p class="fs-1 fw-bold">Sally</p>
-                    <p class="fs-4"># Print</p>
                   </div>
                 </div>
               </div>
@@ -119,10 +107,47 @@
                 </div>
               </div>
             </div>
+
+            <div class="col mt-3">
+              <div class="img-container">
+                <img data-src="./img/colheita.png"  class="img-fluid shadow-sm rounded lazy" />
+                <div class="overlay">
+                  <div class="overlay-text">
+                    <p class="fs-1 fw-bold">Colheita</p>
+                    <p class="fs-4"># Print</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mt-3">
+              <div class="img-container">
+                <img data-src="./img/montanha.png"  class="img-fluid shadow-sm rounded lazy" />
+                <div class="overlay">
+                  <div class="overlay-text">
+                    <p class="fs-1 fw-bold">Montanha</p>
+                    <p class="fs-4"># Print</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col mt-3">
+              <div class="img-container">
+                <img data-src="./img/amigo.png"  class="img-fluid shadow-sm rounded lazy" />
+                <div class="overlay">
+                  <div class="overlay-text">
+                    <p class="fs-1 fw-bold">Amigo</p>
+                    <p class="fs-4"># Print</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           
           </div>
 
-          <div class="row row-cols-1 row-cols-md-2">
+          <div class="row row-cols-1 row-cols-lg-2">
 
             <div class="col mt-3">
               <div class="img-container">
@@ -142,7 +167,7 @@
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">As minhas cores Favoritas</p>
-                    <p class="fs-4"># Livro</p>
+                    <p class="fs-4"># Livro ilustrado</p>
                   </div>
                 </div>
               </div>
@@ -150,7 +175,7 @@
 
           </div>
 
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-xl-4">
+          <div class="row row-cols-1 row-cols-md-2 row-cols-xxl-4">
 
             <div class="col mt-3">
               <div class="img-container">
@@ -158,7 +183,7 @@
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Kiki</p>
-                    <p class="fs-4"># Print</p>
+                    <p class="fs-4"># Tote bag</p>
                   </div>
                 </div>
               </div>
@@ -182,7 +207,7 @@
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Godmother</p>
-                    <p class="fs-4"># Print</p>
+                    <p class="fs-4"># Tote bag</p>
                   </div>
                 </div>
               </div>
@@ -194,7 +219,7 @@
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Máquina de Costura</p>
-                    <p class="fs-4"># Print</p>
+                    <p class="fs-4"># Tote bag</p>
                   </div>
                 </div>
               </div>
