image instagram links

--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/nausica.png" class="img-fluid shadow-sm rounded lazy" />
-                <div class="overlay">
-                  <div class="overlay-text">
-                    <p class="fs-1 fw-bold">Nausicaä</p>
-                    <p class="fs-4"># Tote bag</p>
+                <a href="https://www.instagram.com/p/COvaQg9s_dW/" target="_blank">
+                  <img data-src="./img/nausica.png" class="img-fluid shadow-sm rounded lazy" />
+                  <div class="overlay">
+                    <div class="overlay-text">
+                      <p class="fs-1 fw-bold">Nausicaä <i class="bi-instagram"></i></p>
+                      <p class="fs-4"># Tote bag</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
 
@@ -151,25 +153,29 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/frutaria.png" class="img-fluid shadow-sm rounded lazy" />
-                <div class="overlay">
-                  <div class="overlay-text">
-                    <p class="fs-1 fw-bold">Frutos Frescos</p>
-                    <p class="fs-4"># Pintura</p>
+                <a href="https://www.instagram.com/p/CPLcgNAsSVl/" target="blank">
+                  <img data-src="./img/frutaria.png" class="img-fluid shadow-sm rounded lazy" />
+                  <div class="overlay">
+                    <div class="overlay-text">
+                      <p class="fs-1 fw-bold">Frutos Frescos <i class="bi-instagram"></i></p>
+                      <p class="fs-4"># Pintura</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/cores.png" class="img-fluid shadow-sm rounded lazy" />
-                <div class="overlay">
-                  <div class="overlay-text">
-                    <p class="fs-1 fw-bold">As minhas cores Favoritas</p>
-                    <p class="fs-4"># Livro ilustrado</p>
+                <a href="https://www.instagram.com/p/CEw1IysFkBQ/" target="_blank">
+                  <img data-src="./img/cores.png" class="img-fluid shadow-sm rounded lazy" />
+                  <div class="overlay">
+                    <div class="overlay-text">
+                      <p class="fs-1 fw-bold">As minhas cores Favoritas <i class="bi-instagram"></i></p>
+                      <p class="fs-4"># Livro ilustrado</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
 
@@ -191,13 +197,15 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/spirited.png" class="img-fluid shadow-sm rounded lazy" />
-                <div class="overlay">
-                  <div class="overlay-text">
-                    <p class="fs-1 fw-bold">Spirited Away x Totoro</p>
-                    <p class="fs-4"># Tote bag</p>
+                <a href="https://www.instagram.com/p/CRw4jKPs45q/" target="_blank">
+                  <img data-src="./img/spirited.png" class="img-fluid shadow-sm rounded lazy" />
+                  <div class="overlay">
+                    <div class="overlay-text">
+                      <p class="fs-1 fw-bold">Spirited Away x Totoro <i class="bi-instagram"></i></p>
+                      <p class="fs-4"># Tote bag</p>
+                    </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
 
