Add webp loading strategy

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="col mt-2">
               <div class="img-container">
-                <img src="./img/aldeia.png" class="img-fluid shadow-sm rounded" />
+                <img data-src="aldeia" class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Aldeia</p>
@@ -58,7 +58,7 @@
 
             <div class="col mt-2">
               <div class="img-container">
-                <img src="./img/arvore.png" class="img-fluid shadow-sm rounded" />
+                <img data-src="arvore" class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Árvore</p>
@@ -75,7 +75,7 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/COvaQg9s_dW/" target="_blank">
-                  <img data-src="./img/nausica.png" class="img-fluid shadow-sm rounded lazy" />
+                  <img data-src="nausica" class="img-fluid shadow-sm rounded lazy" />
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">Nausicaä <i class="bi-instagram"></i></p>
@@ -88,7 +88,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/cogu.png" class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="cogu" class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Chuva</p>
@@ -100,7 +100,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/musica.png" class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="musica" class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Música</p>
@@ -112,7 +112,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/colheita.png"  class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="colheita"  class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Colheita</p>
@@ -124,7 +124,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/montanha.png"  class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="montanha"  class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Montanha</p>
@@ -136,7 +136,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/amigo.png"  class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="amigo"  class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Amigo</p>
@@ -154,7 +154,7 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/CPLcgNAsSVl/" target="blank">
-                  <img data-src="./img/frutaria.png" class="img-fluid shadow-sm rounded lazy" />
+                  <img data-src="frutaria" class="img-fluid shadow-sm rounded lazy" />
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">Frutos Frescos <i class="bi-instagram"></i></p>
@@ -168,7 +168,7 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/CEw1IysFkBQ/" target="_blank">
-                  <img data-src="./img/cores.png" class="img-fluid shadow-sm rounded lazy" />
+                  <img data-src="cores" class="img-fluid shadow-sm rounded lazy" />
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">As minhas cores Favoritas <i class="bi-instagram"></i></p>
@@ -185,7 +185,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/kiki.png" class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="kiki" class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Kiki</p>
@@ -198,7 +198,7 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/CRw4jKPs45q/" target="_blank">
-                  <img data-src="./img/spirited.png" class="img-fluid shadow-sm rounded lazy" />
+                  <img data-src="spirited" class="img-fluid shadow-sm rounded lazy" />
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">Spirited Away x Totoro <i class="bi-instagram"></i></p>
@@ -211,7 +211,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/godmother.png" class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="godmother" class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Godmother</p>
@@ -223,7 +223,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="./img/maquina.png" class="img-fluid shadow-sm rounded lazy" />
+                <img data-src="maquina" class="img-fluid shadow-sm rounded lazy" />
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Máquina de Costura</p>
