--- a/loja.html
+++ b/loja.html
@@ -30,17 +30,24 @@
                 <li class="nav-item">
                   <a class="nav-link" href="sobre.html">Sobre</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">Contacto</a>
-                </li>
               </ul>
             </div>
           </div>
         </nav>
 
         <!-- CONTENT -->
-        <div class="container mt-2">
-          
+        <div class="container mt-4">
+          <h4>
+            Loja da Sally
+            <small class="text-muted">(Em construção)</small>
+          </h4>
+          <p>Entra em contacto direto comigo se gostarias de encomendar algum dos seguintes produtos:</p>
+          <ul>
+            <li>Prints</li>
+            <li>Stickers</li>
+            <li>Tote bags</li>
+          </ul>
+          <p>Podes encontrar os meus contactos na página <strong><a href="sobre.html">sobre</a></strong> ou no rodapé do site.</p>
         </div>
 
         <!-- FOOTER -->
