--- a/loja.html
+++ b/loja.html
@@ -47,7 +47,7 @@
             <li>Stickers</li>
             <li>Tote bags</li>
           </ul>
-          <p>Podes encontrar os meus contactos na página <strong><a href="sobre.html">sobre</a></strong> ou no rodapé do site.</p>
+          <p>Podes encontrar os meus contactos na página <strong><a href="sobre.html" class="my-link">sobre</a></strong> ou no rodapé do site.</p>
         </div>
 
         <!-- FOOTER -->
