fix sobre, add analytics

--- a/sobre.html
+++ b/sobre.html
@@ -47,7 +47,7 @@
                   <img src="./img/photo.png" alt="Sally Photo" class="img-fluid shadow-sm rounded">
                 </picture>
               </div>
-              <div class="col mt-sm-4 mt-md-0 justify-content-start">
+              <div class="col mt-4 mt-md-0">
                 <p class="text-break">Oi oi! Daqui a Sally. Sou uma Ilustradora que adora misturar cores e dar vida ao papel em branco através dos meus pincéis, mas sempre acompanhada de tinta da china. Sou fascinada por padrões e por desenhos de contorno. Gosto da noite para trabalhar e da música para me fazer companhia. Se pudesse visitaria todos os diversos cafés que por aí existem só para poder ter mais um bocadinho de inspiração parar criar.</p>
                 
                 <h6>Educação</h6>
