--- a/sobre.html
+++ b/sobre.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-76SN2K37JN"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-76SN2K37JN');
+        </script>
         <title>Sally - Sobre</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
