use lazysizes to do iamge lazyloading

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </head>
     <body>
         <script src="js/main.js"></script>
+        <script src="js/lazysizes.min.js" async=""></script>
         <script src="js/bootstrap.min.js"></script>
         
         <!-- HEADER -->
@@ -52,7 +53,10 @@
 
             <div class="col mt-2">
               <div class="img-container">
-                <img data-src="aldeia" class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/aldeia.webp" type="image/webp" />
+                  <img data-srcset="./img/aldeia.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Aldeia</p>
@@ -64,7 +68,10 @@
 
             <div class="col mt-2">
               <div class="img-container">
-                <img data-src="arvore" class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/arvore.webp" type="image/webp" />
+                  <img data-srcset="./img/arvore.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Árvore</p>
@@ -81,7 +88,10 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/COvaQg9s_dW/" target="_blank">
-                  <img data-src="nausica" class="img-fluid shadow-sm rounded lazy" />
+                  <picture>
+                    <source data-srcset="./img/webp/nausica.webp" type="image/webp" />
+                    <img data-srcset="./img/nausica.png" class="img-fluid shadow-sm rounded lazyload" />
+                  </picture>
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">Nausicaä <i class="bi-instagram"></i></p>
@@ -94,7 +104,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="cogu" class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/cogu.webp" type="image/webp" />
+                  <img data-srcset="./img/cogu.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Chuva</p>
@@ -106,7 +119,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="musica" class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/musica.webp" type="image/webp" />
+                  <img data-srcset="./img/musica.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Música</p>
@@ -118,7 +134,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="colheita"  class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/colheita.webp" type="image/webp" />
+                  <img data-srcset="./img/colheita.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Colheita</p>
@@ -130,7 +149,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="montanha"  class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/montanha.webp" type="image/webp" />
+                  <img data-srcset="./img/montanha.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Montanha</p>
@@ -142,7 +164,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="amigo"  class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/amigo.webp" type="image/webp" />
+                  <img data-srcset="./img/amigo.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Amigo</p>
@@ -160,7 +185,10 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/CPLcgNAsSVl/" target="blank">
-                  <img data-src="frutaria" class="img-fluid shadow-sm rounded lazy" />
+                  <picture>
+                    <source data-srcset="./img/webp/frutaria.webp" type="image/webp" />
+                    <img data-srcset="./img/frutaria.png" class="img-fluid shadow-sm rounded lazyload" />
+                  </picture>
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">Frutos Frescos <i class="bi-instagram"></i></p>
@@ -174,7 +202,10 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/CEw1IysFkBQ/" target="_blank">
-                  <img data-src="cores" class="img-fluid shadow-sm rounded lazy" />
+                  <picture>
+                    <source data-srcset="./img/webp/cores.webp" type="image/webp" />
+                    <img data-srcset="./img/cores.png" class="img-fluid shadow-sm rounded lazyload" />
+                  </picture>
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">As minhas cores Favoritas <i class="bi-instagram"></i></p>
@@ -191,7 +222,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="kiki" class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/kiki.webp" type="image/webp" />
+                  <img data-srcset="./img/kiki.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Kiki</p>
@@ -204,7 +238,10 @@
             <div class="col mt-3">
               <div class="img-container">
                 <a href="https://www.instagram.com/p/CRw4jKPs45q/" target="_blank">
-                  <img data-src="spirited" class="img-fluid shadow-sm rounded lazy" />
+                  <picture>
+                    <source data-srcset="./img/webp/spirited.webp" type="image/webp" />
+                    <img data-srcset="./img/spirited.png" class="img-fluid shadow-sm rounded lazyload" />
+                  </picture>
                   <div class="overlay">
                     <div class="overlay-text">
                       <p class="fs-1 fw-bold">Spirited Away x Totoro <i class="bi-instagram"></i></p>
@@ -217,7 +254,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="godmother" class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/godmother.webp" type="image/webp" />
+                  <img data-srcset="./img/godmother.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Godmother</p>
@@ -229,7 +269,10 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <img data-src="maquina" class="img-fluid shadow-sm rounded lazy" />
+                <picture>
+                  <source data-srcset="./img/webp/maquina.webp" type="image/webp" />
+                  <img data-srcset="./img/maquina.png" class="img-fluid shadow-sm rounded lazyload" />
+                </picture>
                 <div class="overlay">
                   <div class="overlay-text">
                     <p class="fs-1 fw-bold">Máquina de Costura</p>
