--- a/sobre.html
+++ b/sobre.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     </head>
     <body>
+        <script src="js/lazysizes.min.js" async=""></script>
         <script src="js/bootstrap.min.js"></script>
 
         <!-- HEADER -->
@@ -52,8 +53,8 @@
             <div class="row row-cols-1 row-cols-md-2">
               <div class="col">
                 <picture>
-                  <source srcset="./img/webp/photo.webp" type="image/webp">
-                  <img src="./img/photo.png" alt="Sally Photo" class="img-fluid shadow-sm rounded">
+                  <source srcset="./img/webp/photo.webp" type="image/webp" />
+                  <img src="./img/photo.png" class="img-fluid shadow-sm rounded lazyload" />
                 </picture>
               </div>
               <div class="col mt-4 mt-md-0">
