fix <a> targets (mobile)

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/COvaQg9s_dW/" target="_blank">
+                <a href="https://www.instagram.com/p/COvaQg9s_dW/">
                   <picture>
                     <source data-srcset="./img/webp/nausica.webp" type="image/webp" />
                     <img data-srcset="./img/nausica.png" class="img-fluid shadow-sm rounded lazyload" />
@@ -184,7 +184,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/CPLcgNAsSVl/" target="blank">
+                <a href="https://www.instagram.com/p/CPLcgNAsSVl/">
                   <picture>
                     <source data-srcset="./img/webp/frutaria.webp" type="image/webp" />
                     <img data-srcset="./img/frutaria.png" class="img-fluid shadow-sm rounded lazyload" />
@@ -201,7 +201,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/CEw1IysFkBQ/" target="_blank">
+                <a href="https://www.instagram.com/p/CEw1IysFkBQ/">
                   <picture>
                     <source data-srcset="./img/webp/cores.webp" type="image/webp" />
                     <img data-srcset="./img/cores.png" class="img-fluid shadow-sm rounded lazyload" />
@@ -237,7 +237,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/CRw4jKPs45q/" target="_blank">
+                <a href="https://www.instagram.com/p/CRw4jKPs45q/">
                   <picture>
                     <source data-srcset="./img/webp/spirited.webp" type="image/webp" />
                     <img data-srcset="./img/spirited.png" class="img-fluid shadow-sm rounded lazyload" />
@@ -295,7 +295,7 @@
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
               <li class="ms-3"><a href="mailto:sallyi_ilustra@gmail.com"><i class="bi-envelope text-muted" style="font-size: 1rem;"></i></a></li>
-              <li class="ms-3"><a href="https://www.instagram.com/sally_ilustra/" target="_blank"><i class="bi-instagram text-muted" style="font-size: 1rem;"></i></a></li>
+              <li class="ms-3"><a href="https://www.instagram.com/sally_ilustra/"><i class="bi-instagram text-muted" style="font-size: 1rem;"></i></a></li>
             </ul>
           </footer>
         </div>
