--- a/sobre.html
+++ b/sobre.html
@@ -66,7 +66,7 @@
                 <h6>Contactos</h6>
                 <ul class="list-unstyled">
                   <li><i class="bi-envelope me-2"></i><a class="my-link" href="mailto:sallyi_ilustra@gmail.com">sallyi_ilustra@gmail.com</a></li>
-                  <li><i class="bi-instagram me-2"></i><a class="my-link" href="https://www.instagram.com/sally_ilustra/" target="a_blank">sally_ilustra</a></li>        
+                  <li><i class="bi-instagram me-2"></i><a class="my-link" href="https://www.instagram.com/sally_ilustra/">sally_ilustra</a></li>
                 </ul>
               </div>
             </div>
@@ -83,7 +83,7 @@
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
               <li class="ms-3"><a href="mailto:sallyi_ilustra@gmail.com"><i class="bi-envelope text-muted" style="font-size: 1rem;"></i></a></li>
-              <li class="ms-3"><a href="https://www.instagram.com/sally_ilustra/" target="a_blank"><i class="bi-instagram text-muted" style="font-size: 1rem;"></i></a></li>
+              <li class="ms-3"><a href="https://www.instagram.com/sally_ilustra/"><i class="bi-instagram text-muted" style="font-size: 1rem;"></i></a></li>
             </ul>
           </footer>
         </div>
