--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/COvaQg9s_dW/">
+                <a href="https://www.instagram.com/p/COvaQg9s_dW/" target="_blank">
                   <picture>
                     <source data-srcset="./img/webp/nausica.webp" type="image/webp" />
                     <img data-srcset="./img/nausica.png" class="img-fluid shadow-sm rounded lazyload" />
@@ -184,7 +184,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/CPLcgNAsSVl/">
+                <a href="https://www.instagram.com/p/CPLcgNAsSVl/" target="_blank">
                   <picture>
                     <source data-srcset="./img/webp/frutaria.webp" type="image/webp" />
                     <img data-srcset="./img/frutaria.png" class="img-fluid shadow-sm rounded lazyload" />
@@ -201,7 +201,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/CEw1IysFkBQ/">
+                <a href="https://www.instagram.com/p/CEw1IysFkBQ/" target="_blank">
                   <picture>
                     <source data-srcset="./img/webp/cores.webp" type="image/webp" />
                     <img data-srcset="./img/cores.png" class="img-fluid shadow-sm rounded lazyload" />
@@ -237,7 +237,7 @@
 
             <div class="col mt-3">
               <div class="img-container">
-                <a href="https://www.instagram.com/p/CRw4jKPs45q/">
+                <a href="https://www.instagram.com/p/CRw4jKPs45q/" target="_blank">
                   <picture>
                     <source data-srcset="./img/webp/spirited.webp" type="image/webp" />
                     <img data-srcset="./img/spirited.png" class="img-fluid shadow-sm rounded lazyload" />
