--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </div>
         
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-              <li class="ms-3"><a href="mailto:sallyi_ilustra@gmail.com"><i class="bi-envelope text-muted" style="font-size: 1rem;"></i></a></li>
+              <li class="ms-3"><a href="mailto:sally.ilustrando@gmail.com"><i class="bi-envelope text-muted" style="font-size: 1rem;"></i></a></li>
               <li class="ms-3"><a href="https://www.instagram.com/sally_ilustra/"><i class="bi-instagram text-muted" style="font-size: 1rem;"></i></a></li>
             </ul>
           </footer>
