--- a/sobre.html
+++ b/sobre.html
@@ -65,7 +65,7 @@
 
                 <h6>Contactos</h6>
                 <ul class="list-unstyled">
-                  <li><i class="bi-envelope me-2"></i><a class="my-link" href="mailto:sally_ilustrando@gmail.com">sally_ilustrando@gmail.com</a></li>
+                  <li><i class="bi-envelope me-2"></i><a class="my-link" href="mailto:sally.ilustrando@gmail.com">sally.ilustrando@gmail.com</a></li>
                   <li><i class="bi-instagram me-2"></i><a class="my-link" href="https://www.instagram.com/sally_ilustra/">sally_ilustra</a></li>
                 </ul>
               </div>
