refactor gallery with macy and lozad

--- a/sobre.html
+++ b/sobre.html
@@ -52,10 +52,7 @@
 
             <div class="row row-cols-1 row-cols-md-2">
               <div class="col">
-                <picture>
-                  <source srcset="./img/webp/photo.webp" type="image/webp" />
-                  <img src="./img/photo.png" class="img-fluid shadow-sm rounded lazyload" />
-                </picture>
+                <img src="./img/photo.webp" class="img-fluid shadow-sm rounded lazyload" />
               </div>
               <div class="col mt-4 mt-md-0">
                 <p class="text-break">Oi oi! Daqui a Sally. Sou uma Ilustradora que adora misturar cores e dar vida ao papel em branco através dos meus pincéis, mas sempre acompanhada de tinta da china. Sou fascinada por padrões e por desenhos de contorno. Gosto da noite para trabalhar e da música para me fazer companhia. Se pudesse visitaria todos os diversos cafés que por aí existem só para poder ter mais um bocadinho de inspiração parar criar.</p>
